# reaper_ambix

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: CODE_SIGNING.md
.github/workflows/: release.yml
WDL/swell/sample_project/sample_project.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
WDL/swell/sample_project/sample_project.xcodeproj/project.xcworkspace/xcshareddata/: sample_project.xccheckout
WDL/swell/sample_project/sample_project.xcodeproj/project.xcworkspace/xcuserdata/matthias.xcuserdatad/: UserInterfaceState.xcuserstate
WDL/swell/sample_project/sample_project.xcodeproj/xcuserdata/matthias.xcuserdatad/xcschemes/: sample_project.xcscheme
cmake/: Findlibambix.cmake  Findlibsndfile.cmake
jmde/: reaper_plugin.h  reaper_plugin_functions.h
scripts/: build_osx.sh  build_win.bat  setup.sh
scripts/installer/: reaper_ambix.iss
src/: cafdefines.h  libambixImport.cpp  libambixImport.h  main.cpp  pcmsink_ambix copy.cpp  pcmsink_ambix.cpp  pcmsrc_ambix.cpp  res.aps  res.rc  res.rc_mac_dlg  resource.h  wrapperclass.cpp  wrapperclass.h
src/adaptermatrices/: adapter_circular.h  adapter_hemi.h
